<resources>
    <string name="app_name">What_eat</string>
    <string name="add_bank_information">添加银行卡信息</string>
    <string name="select_bank_type">请选择银行卡类型</string>
    <string name="card_type">卡类型</string>
    <string name="fill_bank_reserve_information">请填写银行预留信息</string>
    <string name="name">姓名</string>
    <string name="input_card_name">请输入持卡人姓名</string>
    <string name="tv_card_type">证件类型</string>
    <string name="identity_card">身份证</string>
    <string name="card_number">证件号</string>
    <string name="input_card_number">请输入证件号</string>
    <string name="hint_band_bank">提醒：后续只能绑定该持卡人的银行卡</string>
    <string name="phone_number">手机号</string>
    <string name="input_phone_number">请输入银行预留手机号</string>
    <string name="agreement">同意</string>
    <string name="contract_agreement">《用户协议》</string>
    <string name="next">下一步</string>
    <string name="tv_select_bank_type">请选择银行卡类型</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="password_manager">密码管理</string>
    <string name="modify_withdraw_password">修改提现密码</string>
    <string name="forget_withdraw_password">忘记提下密码</string>
    <string name="finish">完成</string>
    <string name="predict_time">预计2015&#8211;09&#8211;27 23:59前到账</string>
    <string name="deposit_card">储蓄卡</string>
    <string name="account_number">招商银行 尾号924</string>
    <string name="withdraw_money">提现金额</string>
    <string name="money">￥1200.00</string>
    <string name="application_withdraw">提现申请已提交</string>
    <string name="withdraw_detail">提现详情</string>
    <string name="sms_authentication_code">短信验证码验证</string>
    <string name="bind_sms_bank">绑定银行卡需要短信确认绑定银行卡需要短信确认,验证码已发送至手机:188****8058,请按提示操作。</string>
    <string name="verification_code">填写验证码</string>
    <string name="get_verification_code">获取验证码\n(60s)</string>
    <string name="afresh_gain">重新获取</string>
    <string name="income_withdraw">收入提现</string>
    <string name="total_income">金额</string>
    <string name="income_total">￥1200.00</string>
    <string name="card">**** **** **** 1234</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="money_sum">金额提现</string>
    <string name="add_others_bank_card">添加其他银行卡</string>
    <string name="remove_binding">解除绑定</string>
    <string name="input_withdraw_password">请输入提现密码，用于解除绑定。</string>
    <string name="password_false">密码不正确</string>
    <string name="confirm_password">确认提现密码</string>
    <string name="set_password_withdraw">设置提现密码</string>
    <string name="set_withdraw_password_hint">请设置体现密码,用于提现验证</string>
    <string name="income_detail">收入明细</string>
    <string name="bank_card_number">卡号</string>
    <string name="add_card_hint">无需网银/免费支付</string>
    <string name="password_sms">提供支付密码和短信验证的双重保障</string>
    <string name="more">了解更多</string>
    <string name="captcha">填写验证码</string>
    <string name="btn_commit">立即提交</string>
    <!-- login-->
    <string name="login">登录</string>
    <string name="account">账 号</string>
    <string name="input_account_hint">请输入您的账号</string>
    <string name="password">密 码</string>
    <string name="input_pwd_hint">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="become_businessman">成为商户</string>
    <string name="become_provider">成为供应商</string>
    <string name="become_deliveryman">成为跑腿</string>
    <string name="home">首页</string>
    <string name="invitation_friend_join">邀请朋友加入</string>
    <string name="work_status">上班下班</string>
    <string name="fast_delivery">快送</string>
    <string name="tickTack">滴答</string>
    <string name="runner_way">跑腿途中</string>
    <string name="callRunner">呼叫跑腿</string>
    <string name="reservation_runner">预约跑腿</string>
    <string name="car">汽车</string>
    <string name="moped">助动车</string>
    <string name="order_serial_number_search_hint">请输入订单编号</string>
    <string name="search">搜索</string>
    <string name="waite_deliver_order">待发货</string>
    <string name="order_number">1234567890123455</string>
    <string name="data">03/16 12:12</string>
    <string name="description">山东红富士苹果特价优惠清脆爽口\n水分多还打折限时抢购</string>
    <string name="actual_paid">实付:￥%1$s</string>
    <string name="twenty">20</string>
    <string name="product_number">数量：%1$skg</string>
    <string name="number_buy">1.2</string>
    <string name="total_paid">￥%1$s(含运费￥%2$s)</string>
    <string name="delivery">配送</string>
    <string name="delivery_staff">lily</string>
    <string name="order_detail">订单详情</string>
    <string name="cash_payment">现付%1$s元</string>
    <string name="delivery_fee">配送费用</string>
    <string name="booking_cargo">预约取货</string>
    <string name="delivery_time">04&#8211;22 14:20</string>
    <string name="important_remark">重要说明：%1$s</string>
    <string name="commodity_information">商品信息：%1$s</string>
    <string name="commodity_name">商品名称：%1$s</string>
    <string name="commodity_type">商品类型：%1$s</string>
    <string name="commodity_value">商品价值：%1$s</string>
    <string name="commodity_weight">商品重量：%1$s</string>
    <string name="transportation_tools">交通工具：%1$s</string>
    <string name="shipments">发货地：&#160;&#160;&#160;&#160;%1$s</string>
    <string name="shop_name">店&#160;&#160;&#160;&#160;名：&#160;&#160;&#160;&#160;%1$s</string>
    <string name="shop_phone">电&#160;&#160;&#160;&#160;话：&#160;&#160;&#160;&#160;%1$s</string>
    <string name="receive_address">收货地：&#160;&#160;&#160;&#160;%1$s</string>
    <string name="receiver_name">姓&#160;&#160;&#160;&#160;名：&#160;&#160;&#160;&#160;%1$s</string>
    <string name="receiver_phone">电&#160;&#160;&#160;&#160;话：&#160;&#160;&#160;&#160;%1$s</string>
    <string name="delivering">配送中</string>
    <string name="commodity">商品</string>
    <string name="price">￥20.00</string>

    <string name="runner_name">跑腿姓名：&#160;&#160;&#160;&#160;%1$s</string>
    <string name="runner_phone">电&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;话：&#160;&#160;&#160;&#160;%1$s</string>
    <string name="runner_distance_custom">距离客户：&#160;&#160;&#160;&#160;%1$skm</string>
    <string name="order_status">订单状态：&#160;&#160;&#160;&#160;%1$skm</string>
    <string name="predict_arrive_time">预计送达：&#160;&#160;&#160;&#160;%1$s(提前%2$s分钟)</string>

    <string-array name="bank">
            <item>请选择银行</item>
            <item>工商银行</item>
            <item>农业银行</item>
            <item>交通银行</item>
            <item>招商银行</item>
            <item>光大银行</item>
            <item>建设银行</item>
            <item>兴业银行</item>
            <item>中国银行</item>
            <item>中信银行</item>
        </string-array>
</resources>

