<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:background="#e8e8e8">
            <Button
                android:id="@id/btOrderStatus"
                android:layout_width="45dp"
                android:layout_height="20dp"
                android:text="@string/delivering"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:background="@drawable/shape_orange"/>
            <TextView
                android:id="@id/order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:text="@string/order_number"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="15dp"
                android:text="@string/data"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@id/receiverName"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/name"/>
            <TextView
                android:id="@id/commodity"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/commodity"/>
            <TextView
                android:id="@id/commodityPrice"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/price"/>
        </LinearLayout>
        <View
            style="@style/divider"/>
        <TextView
            android:id="@id/receiveAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="2dp"
            android:paddingTop="15dp"
            style="@style/text_nor"
            android:paddingBottom="8dp"
            android:text="@string/receive_address"/>
        <TextView
            android:id="@id/receiverName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="2dp"
            android:paddingEnd="15dp"
            style="@style/text_nor"
            android:paddingBottom="8dp"
            android:text="@string/receiver_name"/>
        <TextView
            android:id="@id/receiverPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="2dp"
            android:paddingEnd="20dp"
            style="@style/text_nor"
            android:paddingBottom="8dp"
            android:text="@string/receiver_phone"
            android:drawablePadding="25dp"
            android:drawableEnd="@drawable/ic_phone" />
        <View
            style="@style/divider"/>
        <TextView
            android:id="@id/runnerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="2dp"
            android:paddingTop="15dp"
            style="@style/text_nor"
            android:paddingBottom="8dp"
            android:text="@string/runner_name"/>
        <TextView
            android:id="@id/runnerPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="2dp"
            android:paddingEnd="20dp"
            style="@style/text_nor"
            android:paddingBottom="8dp"
            android:text="@string/runner_phone"
            android:drawablePadding="25dp"
            android:drawableEnd="@drawable/ic_phone" />
        <TextView
            android:id="@id/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="2dp"
            android:paddingEnd="15dp"
            style="@style/text_nor"
            android:paddingBottom="8dp"
            android:text="@string/runner_distance_custom"/>
        <TextView
            android:id="@id/predictArrive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="2dp"
            android:paddingEnd="15dp"
            style="@style/text_nor"
            android:paddingBottom="8dp"
            android:text="@string/predict_arrive_time"/>
        <TextView
            android:id="@id/orderStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="2dp"
            android:paddingEnd="25dp"
            style="@style/text_nor"
            android:paddingBottom="8dp"
            android:text="@string/order_status"/>

</LinearLayout>