<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    android:orientation="vertical">
    <View
       style="@style/divider"/>
    <TextView
        android:id="@id/important_remark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        style="@style/text_nor"
        android:singleLine="true"
        android:text="@string/important_remark"/>
    <View
        style="@style/divider"/>

    <TextView
    android:id="@id/shipments"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="15dp"
    android:paddingEnd="2dp"
    android:paddingTop="15dp"
    style="@style/text_nor"
    android:paddingBottom="8dp"
    android:text="@string/shipments"/>
    <TextView
        android:id="@id/shopName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="2dp"
        android:paddingEnd="15dp"
        style="@style/text_nor"
        android:paddingBottom="8dp"
        android:text="@string/shop_name"/>
    <TextView
        android:id="@id/shopPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="2dp"
        android:paddingEnd="20dp"
        style="@style/text_nor"
        android:paddingBottom="8dp"
        android:text="@string/shop_phone"
        android:drawablePadding="25dp"
        android:drawableEnd="@drawable/ic_phone" />
    <View style="@style/divider"/>
    <TextView
        android:id="@id/receiveAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="2dp"
        android:paddingTop="15dp"
        style="@style/text_nor"
        android:paddingBottom="8dp"
        android:text="@string/receive_address"/>
    <TextView
        android:id="@id/receiverName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="2dp"
        android:paddingEnd="15dp"
        style="@style/text_nor"
        android:paddingBottom="8dp"
        android:text="@string/receiver_name"/>
    <TextView
        android:id="@id/receiverPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="2dp"
        android:paddingEnd="20dp"
        style="@style/text_nor"
        android:paddingBottom="8dp"
        android:text="@string/receiver_phone"
        android:drawablePadding="25dp"
        android:drawableEnd="@drawable/ic_phone" />
    <View style="@style/divider"/>
    <View
        style="@style/divider"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@id/commodityInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        style="@style/text_nor"
        android:singleLine="true"
        android:text="@string/commodity_information"/>
    <View
        style="@style/divider"/>
    <TextView
        android:id="@id/commodityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="2dp"
        android:paddingTop="15dp"
        style="@style/text_nor"
        android:paddingBottom="8dp"
        android:text="@string/commodity_name"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@id/commodityType"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="2dp"
        android:paddingEnd="15dp"
        style="@style/text_nor"
        android:paddingBottom="8dp"
        android:text="@string/commodity_type"/>
        <TextView
            android:id="@id/commodityValue"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingTop="2dp"
            android:paddingEnd="15dp"
            style="@style/text_nor"
            android:paddingBottom="8dp"
            android:text="@string/commodity_value"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@id/commodityWeight"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="2dp"
        android:paddingEnd="20dp"
        style="@style/text_nor"
        android:paddingBottom="8dp"
        android:text="@string/commodity_weight" />
    <TextView
        android:id="@id/transportationTools"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingTop="2dp"
        android:paddingEnd="15dp"
        style="@style/text_nor"
        android:paddingBottom="8dp"
        android:text="@string/transportation_tools"/>
    </LinearLayout>
    <View style="@style/divider"/>
</LinearLayout>