<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
   <include
       layout="@layout/add_bank_title"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginTop="25dp"
    android:layout_marginBottom="3dp"
    style="@style/text_nor"
    android:text="@string/select_bank_type"
    />
        <View
            style="@style/divider"/>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/height_nor"
          android:orientation="horizontal">
          <TextView
              android:id="@+id/tvCardType"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/card_type"
                style="@style/text_nor"
              android:layout_centerVertical="true"
              android:layout_marginStart="15dp"/>
          <Spinner
              android:id="@+id/bank_type"
              android:layout_width="wrap_content"
              android:layout_centerInParent="true"
              android:layout_toEndOf="@id/tvCardType"
              android:layout_height="wrap_content"
              android:entries="@array/bank">
          </Spinner>
      </RelativeLayout>
       <View
          style="@style/divider"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/fill_bank_reserve_information"
            style="@style/text_nor"/>
        <View
            android:layout_marginTop="5dp"
            style="@style/divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="@dimen/height_nor">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
               style="@style/text_nor"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"/>
            <EditText
                android:id="@+id/etCardName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                style="@style/text_nor"
                android:layout_centerInParent="true"
                android:hint="@string/input_card_name"/>
        </RelativeLayout>
       <View
           style="@style/divider"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_nor">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_card_type"
                style="@style/text_nor"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/identity_card"
                android:layout_centerInParent="true"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"/>
        </RelativeLayout>
        <View
            style="@style/divider"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_nor">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_number"
               style="@style/text_nor"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"/>
            <EditText
              android:id="@+id/etCardIdentity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:maxLength="25"
                style="@style/text_nor"
                android:layout_centerInParent="true"
                android:hint="@string/input_card_number"/>
        </RelativeLayout>
       <View
           style="@style/divider"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/text_nor"
            android:layout_marginTop="15dp"
            android:text="@string/hint_band_bank"/>
       <View
           android:layout_marginTop="20dp"
         style="@style/divider"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_nor">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                style="@style/text_nor"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"/>
            <EditText
                android:id="@+id/reserve_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                style="@style/text_nor"
               android:layout_centerInParent="true"
                android:inputType="phone"
                android:maxLength="11"
                android:hint="@string/input_phone_number"/>
        </RelativeLayout>
        <View
            style="@style/divider"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:checked="true"/>
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            android:text="@string/agreement"/>
            <TextView
                android:id="@+id/user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:textSize="14sp"
                android:textColor="@color/red"
                android:text="@string/contract_agreement"/>
        </LinearLayout>
        <Button
            android:id="@+id/next"
            android:layout_width="340dp"
            android:layout_height="@dimen/height_short"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_long"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:background="@drawable/bg_btn_orange"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>