<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">
   <include
       layout="@layout/add_bank_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_select_bank_type"
        style="@style/text_nor"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:background="@drawable/bg_white_rect"
        android:layout_marginTop="5dp"
        android:layout_height="@dimen/height_nor">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/text_nor"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"/>
        <EditText
            android:id="@+id/etCardName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            style="@style/text_nor"
            android:layout_centerInParent="true"
            android:hint="@string/input_card_name"/>
    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:checked="true"/>
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            android:text="@string/agreement"/>
            <TextView
                android:id="@+id/user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:textSize="14sp"
                android:textColor="@color/red"
                android:text="@string/contract_agreement"/>
        </LinearLayout>
        <Button
            android:id="@+id/next"
            android:layout_width="340dp"
            android:layout_height="@dimen/height_short"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_long"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:background="@drawable/bg_btn_orange"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/cancel"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@null"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_marginStart="5dp"
        android:textColor="@color/blue"
        android:text="@string/cancel"/>
        <TextView
            android:id="@+id/ok"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:textColor="@color/blue"
            android:text="@string/ok"/>
    </RelativeLayout>

</LinearLayout>