<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/red">
        <TextView
            android:id="@+id/bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_bank_card"
            android:textColor="@color/white"
            style="@style/text_big" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income_detail"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            style="@style/text_nor"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"/>
        <ImageView
            android:id="@+id/back_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_nor"
            android:layout_centerVertical="true"
            android:src="@drawable/back_1"/>
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:background="@drawable/bg_white_rect"
        android:layout_marginTop="35dp"
        android:layout_height="@dimen/height_nor">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_card_number"
            style="@style/text_nor"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"/>
        <EditText
            android:id="@+id/etCardName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            style="@style/text_nor"
            android:layout_centerInParent="true"
            android:hint="@string/add_card_hint"/>
    </RelativeLayout>


        <Button
            android:id="@+id/next"
            android:layout_width="340dp"
            android:layout_height="@dimen/height_short"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/height_nor"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:background="@drawable/bg_btn_orange"/>
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        style="@style/text_nor"
        android:text="@string/password_sms"/>

    <TextView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/red"
        android:textSize="14sp"
        android:text="@string/more"/>
</LinearLayout>